<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/downloadFragment">

    <fragment
        android:id="@+id/downloadFragment"
        android:name="com.tradeapp.cryptobotremote.ui.download.DownloadFragment"
        android:label="@string/title_download"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/remoteFragment"
        android:name="com.tradeapp.cryptobotremote.ui.remote.RemoteFragment"
        android:label="@string/title_remote"
        tools:layout="@layout/fragment_remote" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.tradeapp.cryptobotremote.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
